--- a/DailyAnnouncements.html
+++ b/DailyAnnouncements.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" type="text/css" link rel="indx.css">
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="DailyAnnouncementsStyling.css"/>
+  <title>CVU Daily Announcements</title>
+</head>
 <body>
 <h2>
 <p style="text-align:center;"
@@ -74,7 +79,7 @@ will share these Shout-Outs throughout the school on Thursday!</li>
 <b>DIRECTION CENTER INFO:</b>
 </h3>
 <ul>
-<li>Vermont College Fairs sponsored by Senator Bernie Sanders --- Saturday, 10/7 at Lyndon State College and
+  <li>Vermont College Fairs sponsored by Senator <span style="color:blue;">Bernie Sanders</span> --- Saturday, 10/7 at Lyndon State College and
 Saturday, 10/14 at Castleton University 10:00am, please RSVP at: <a href="https://www.sanders.senate.gov/events">https://www.sanders.senate.gov/events</a></li>
 <br>
 <li>Admissions Rep Visits, Thursday, 9/21:
@@ -117,3 +122,5 @@ Student must have a GPA of 2.8 or higher; demonstrate leadership through school 
 experience; and show strong commitment to and involvement in community service. Submit a resume to the
 Direction Center no later than 11/3 to be considered.</li>
 </ul>
+</body>
+</html>
