--- a/DailyAnnouncements.html
+++ b/DailyAnnouncements.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <h2>
-<p style="text-align:center;"
+<p class="class1"
 <b>CVU ANNOUNCEMENTS</b>
 <br>
 Thursday, September 21, 2017
 <br>
 <b>RED DAY</b>
 </h2>
-<p style="text-align:center;">
+<p class:"class1">
 Archived announcements: <a href="http://cvuweb.cvuhs.org/Announcements/Archive/">http://cvuweb.cvuhs.org/Announcements/Archive/</a>
 </p>
 <b>Birthdays: Amma Buhmann, Grace Colbeth, Erin Curtin, Roarke Flad, Lily Ledak, Cindy Erwin</b>
@@ -23,7 +23,7 @@ Menu: Chicken & Biscuits w/veggies, Fresh Acorn Squash Casserole w/garlic bread 
 Activities:
 </p><b>==========================================================================================</b>
 <b>NEW:</b>
-<p style="text-align:center;">
+<p class="class1">
 <b>SPIRIT WEEK</b>
 <br>
 Monday-America
