--- a/DailyAnnouncements.html
+++ b/DailyAnnouncements.html
@@ -79,7 +79,7 @@ will share these Shout-Outs throughout the school on Thursday!</li>
 <b>DIRECTION CENTER INFO:</b>
 </h3>
 <ul>
-  <li>Vermont College Fairs sponsored by Senator <span style="color:blue;">Bernie Sanders</span> --- Saturday, 10/7 at Lyndon State College and
+  <li>Vermont College Fairs sponsored by Senator <span id="b">Bernie Sanders</span> --- Saturday, 10/7 at Lyndon State College and
 Saturday, 10/14 at Castleton University 10:00am, please RSVP at: <a href="https://www.sanders.senate.gov/events">https://www.sanders.senate.gov/events</a></li>
 <br>
 <li>Admissions Rep Visits, Thursday, 9/21:
