--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="MathQuiz.html>Math Quiz<a>
+  My Files
+  <a href="MathQuiz.html>Math Quiz<a>
 </body>
 </html>
