--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-  My Files
-  <a href="MathQuiz.html>Math Quiz<a>
+<h1>My Files</h1>
+<p>
+<a href="MathQuiz.html">Math Quiz<a>
+</p>
 </body>
 </html>
